# umn-detector-code

./: .gitignore  10-bridgeport.rules  11-dp5.rules  CMakeLists.txt  readme.md  setup_guide.md
controller-code/: .gitignore  readme.md
controller-code/det-controller/: Listener.hh  controller.cc  controller.hh
controller-code/det-messages/: CMakeLists.txt
controller-code/det-service/: CMakeLists.txt  DetectorService.cc  DetectorService.hh  thread_safe_queue.hh
controller-code/det-support/: DetectorSupport.cc  DetectorSupport.hh
controller-code/det-support/tests/: CMakeLists.txt  test_det_support.cc
controller-code/hafx-ctrl/: CMakeLists.txt  HafxControl.cc  HafxControl.hh
controller-code/hafx-ctrl/tests/: test_hafx_ctrl.cc
controller-code/libusb-cpp/: CMakeLists.txt  LibUsbCpp.hh
controller-code/logging/: logging.hh
controller-code/raii-gpio/: CMakeLists.txt  raii_gpio.cpp
controller-code/sipm3k-interface/: CMakeLists.txt  IoContainer.cc  UsbManager.cc  UsbManager.hh
controller-code/sipm3k-interface/tests/: CMakeLists.txt
controller-code/x123-ctrl/: CMakeLists.txt  X123Control.cc
controller-code/x123-interface/: CMakeLists.txt  CharCast.hh  UsbConnectionManager.hh
controller-code/x123-interface/packets/: BasePacket.hh
controller-code/x123-interface/packets/requests/: SequentialBuffering.hh  TextConfiguration.cc  ZeroLengthPackets.hh
controller-code/x123-interface/packets/responses/: Ack.cc  Spectrum.cc  Status.hh  TextConfigurationReadback.hh
docs/: detector-commands.md  detector-commands.txt  detector-configurations.md  exact-timing-documentation.md  exact-usage.md  impress-usage.md  python-setup.md  readme.md  scp-guide.md  setup-guide.md  usage-guide.md
flight-controller/: CMakeLists.txt  readme.md
flight-controller/controller-code/: CMakeLists.txt  launch-detector.sh  readme.md
flight-controller/controller-code/det-controller/: CMakeLists.txt  Listener.cc  Listener.hh  main.cc  main.hh
flight-controller/controller-code/det-messages/: CMakeLists.txt  DetectorMessages.cc  DetectorMessages.hh
flight-controller/controller-code/det-service/: CMakeLists.txt  DetectorService.cc  DetectorService.hh
flight-controller/controller-code/det-service/tests/: CMakeLists.txt  test_det_service.cc
flight-controller/controller-code/det-support/: CMakeLists.txt  DetectorSupport.cc  DetectorSupport.hh  Socket.hh
flight-controller/controller-code/edge-detector/: CMakeLists.txt  edge_detector.c
flight-controller/controller-code/hafx-ctrl/: HafxControl.cc  HafxControl.hh
flight-controller/controller-code/hafx-ctrl/tests/: CMakeLists.txt  test_hafx_ctrl.cc
flight-controller/controller-code/install/: 10-bridgeport.rules  11-dp5.rules  CMakeLists.txt  add_envars.bash  det-controller.service  det-parent.target  det-udpcapture-hafx-debug-c1.service  det-udpcapture-hafx-debug-m1.service  det-udpcapture-hafx-debug-m5.service  det-udpcapture-hafx-debug-x1.service  det-udpcapture-hafx-sci-c1.service  det-udpcapture-hafx-sci-m1.service  det-udpcapture-hafx-sci-m5.service  det-udpcapture-hafx-sci-x1.service  det-udpcapture-health.service  det-udpcapture-x123-debug.service  det-udpcapture-x123-sci.service  detvars.env  envars.bash  reload_usb.bash
flight-controller/controller-code/libusb-cpp/: LibUsbCpp.cc
flight-controller/controller-code/logging/: CMakeLists.txt  logging.cc
flight-controller/controller-code/raii-gpio/: raii_gpio.h  readme.md
flight-controller/controller-code/raii-gpio/tests/: test_raii_gpio.cpp
flight-controller/controller-code/sipm3k-interface/: IoContainer.cc  IoContainer.hh  UsbManager.cc
flight-controller/controller-code/sipm3k-interface/tests/: test_sipm3k_interface.cc
flight-controller/controller-code/utilities/: CMakeLists.txt  common.hh  hafx_scope_trace.cc  hafx_spectrum.cc
flight-controller/controller-code/x123-ctrl/: X123Control.cc  X123Control.hh  X123DriverWrap.cc  X123DriverWrap.hh
flight-controller/controller-code/x123-interface/: UsbConnectionManager.cc  common.hh
flight-controller/controller-code/x123-interface/packets/: BasePacket.cc  CMakeLists.txt
flight-controller/controller-code/x123-interface/packets/requests/: CMakeLists.txt  SequentialBuffering.cc  TextConfiguration.hh  ZeroLengthPackets.cc
flight-controller/controller-code/x123-interface/packets/responses/: Ack.hh  CMakeLists.txt  DiagnosticData.cc  DiagnosticData.hh  Spectrum.hh  Status.cc  TextConfigurationReadback.cc
flight-controller/install/: 11-dp5.rules  add_port_variables.bash  detector_ports.bash  usb.rules
flight-controller/util/: udp_capture.cpp  udp_capture.h
lab-scripts/: .gitignore  hafx_histogram.bash  hafx_list_mode.bash  init.bash  launch_detector.bash  launch_udp_caps.bash  lots_of_debug.bash  nominal_science.bash  readme.md  verify.bash
lab-scripts/bash-scripts/: detector_health.bash  launch_udp_caps.bash  quit.bash  udpcap_ports.bash  view_logs.bash
lab-scripts/data-collection/: check_running.bash  detector_health.bash  first_boot.bash  hafx_all_channel_histogram.bash  hafx_histogram.bash  hafx_list_mode.bash  hafx_registers_read.bash  hafx_scope_trace.bash  init.bash  launch_detector.bash  launch_udp_caps.bash  nominal_science.bash  nrl_init.bash  nrl_launch_udp_caps.bash  setup_impress_binning  start_nrl_list.bash  udpcap_ports.bash  view_logs.bash  x123_histogram.bash
python/: .gitignore  pyproject.toml  readme.md
python/examples/: NRL list mode.ipynb  Read X123 debug data.ipynb  exact-science.ipynb  style
python/examples/hafx-histogram-analysis-example/: analysis-example.ipynb
python/examples/nominal-science-example/: nominal-analysis.ipynb
python/tests/: database_json_decoder.py  look_at_pps.py  test_rebinner_core.py
python/umndet/: plotting.py
python/umndet/common/: constants.py  helpers.py  impress_exact_structs.py
python/umndet/ground/: .gitignore  json_decoders.py
python/umndet/rebinner/: .gitignore  file_based_rebinner.py  rebinner_core.py
python/umndet/tools/: generate_binning.py  simulate_health.py  simulate_slices.py
util/: CMakeLists.txt  udp_capture.cpp
(+6 files in other folders)
