[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['umndet']

[project]
version = "0"
name = "umn_detector_python"
dependencies = [
    "astropy",
    "numpy",
    "matplotlib"
]

[project.scripts]
# For in-flight use
impress-rebinner = "umndet.rebinner.file_based_rebinner:main"

# Tools (simulations, ...)
simulate-impress-health = "umndet.tools.simulate_health:main"
simulate-impress-science = "umndet.tools.simulate_slices:main"

# Ground (decoders, ...)
decode-impress-health = "umndet.ground.json_decoders:decode_health"

decode-impress-hafx = "umndet.ground.json_decoders:decode_hafx_sci"
decode-hafx-debug-hist = "umndet.ground.json_decoders:decode_hafx_debug_hist"

decode-x123-science = "umndet.ground.json_decoders:decode_x123_sci"
